--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
             <ul>
                 <li>
-                    <a href=""></a>
+                    <a href="">
                         Home
                     </a>
                 </li>
@@ -30,17 +30,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" ></a>
+                    <a href="" >
                         Sucursales
                     </a>
                 </li>
                 <li>
-                    <a href="pages/compra.html" ></a>
+                    <a href="pages/compra.html" >
                         Compras
                     </a>
                 </li>
                 <li>
-                    <a href=""></a>
+                    <a href="">
                         Inicio de sesión
                     </a>
                 </li>
