--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="pages/compra.html" >
+                    <a href="./pages/compra.html" >
                         Compras
                     </a>
                 </li>
@@ -69,7 +69,7 @@
                         <span class="pago">$ 200</span>
                         </div>
                         <div class="block2">
-                            <button class="shopping-button" id="cart-shopping" onclick="location.href='pages/compra.html'">
+                            <button class="shopping-button" id="cart-shopping" onclick="location.href='./pages/compra.html'">
                                 Ir al carrito
                             </button>
                         </div>
